tests/NormalTests/paczka1/small_fuzzy/66955569.err
Error in line 5: wtFhfD A551 64,83
Error in line 14: w3CAtag A634 87,04
Error in line 12: w3CAtag S827 16,3
Error in line 11: wtFhfD S827 11,8
